# terraformer-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/terraformer/: __init__.py  common.py
src/terraformer/arcgis/: __init__.py  _helpers.py  arcgis.py  geojson.py  helpers.py
tests/: test_arcgis_geojson.py  test_arcgis_to_geojson.py  test_geojson_to_arcgis.py
